set visible text on mobile mode, update fixtures to allow see long text behavior.

--- a/packages/@coorpacademy-components/src/molecule/questions/qcm-graphic/style.css
+++ b/packages/@coorpacademy-components/src/molecule/questions/qcm-graphic/style.css
@@ -144,10 +144,17 @@
   }
 
   .titleWrapper {
+    height: 100%;
+    width: 100%;
+    display: flex;
     white-space: wrap;
     overflow: hidden;
     padding: 0;
     justify-content: left;
     font-size: 15px;
+  }
+
+  .title {
+    text-align: left;
   }
 }
